[package]
name = "edgelord"
version = "0.1.0"
authors = ["Ashlin Eldridge <ashlineldridge@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.52"
serde_json = "1.0.66"
wasm-bindgen = "0.2.75"
wasm-bindgen-futures = "0.4.25"
worker-kv = "0.2.0"
